@@ -1,4 +1,4 @@
-from flask import Blueprint, request
+from flask import Blueprint, current_app, request
 from flask.ext.login import current_user, login_required
 
 from _15thnight.core import send_out_alert
@@ -44,7 +44,7 @@ def get_alert(alert_id):
     if current_user.role == 'provider':
         if not alert.provider_has_permission(current_user):
             return api_error('Permission denied')
-        data = alert.to_provider_json(current_user)
+        data = alert.to_provider_dict(current_user)
     elif current_user.role == 'advocate':
         if alert.user.id != current_user.id:
             return api_error('Permission denied')
@@ -64,7 +64,9 @@ def create_alert():
     if not form.validate_on_submit():
         return api_error(form.errors)
 
-    send_out_alert(form)
+    host_name = current_app.config.get("HOST_NAME", "")
+
+    send_out_alert(form, host_name)
     return '', 201
 
 
