@@ -17,16 +17,16 @@ from sqlalchemy.dialects.postgresql import ENUM
 import sqlalchemy as sa
 
 try:
-    from config import DATABASE_URL
+    from config import DATABASE_URI
 except:
-    from configdist import DATABASE_URL
+    from configdist import DATABASE_URI
 
 
 def upgrade():
     ### commands auto generated by Alembic - please adjust! ###
     gender_column = sa.Column(
         'gender', sa.Enum('male', 'female', 'unspecified'))
-    if DATABASE_URL[:8] == 'postgres':
+    if DATABASE_URI[:8] == 'postgres':
         gender_enum = ENUM(
             'male', 'female', 'unspecified', name='alert_gender')
         gender_enum.create(op.get_bind(), checkfirst=False)
