@@ -1,1 +1,0 @@
-from _15thnight.queue import celery
